--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-catwalk",
+  "name": "Atelier-API",
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
@@ -7,45 +7,26 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "clean": "rm dist/bundle.js",
     "test": "jest",
     "update-test": "jest --updateSnapshot",
-    "build-dev": "webpack -d --mode development --watch",
-    "build-prod": "webpack -p --mode production",
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^1.19.4",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-images-uploading": "^3.1.2",
-    "react-router-dom": "^5.2.0",
-    "react-tracking": "^8.1.0"
+    "csv-parser": "^2.3.4",
+    "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
+    "json2csv": "^4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "jest": "^26.6.3"
   }
 }
