--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "nodemon": "^1.19.4",
-    "csv-parser": "^2.3.4",
-    "csv-writer": "^1.6.0",
-    "csvtojson": "^2.0.10",
-    "json2csv": "^4.5.4"
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^1.19.4",
+    "csv-parser": "^2.3.4",
+    "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
+    "json2csv": "^4.5.4"
   }
 }
